--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -6,3 +6,16 @@ view: https://github.com/Vinit-Sehgal/lgar/blob/main/%s
 language:
   ui:
     chapter_name: "Chapter "
+
+format:
+  html:
+      theme: flatly
+      rmdformats::readthedown:
+      code-fold: false
+      self_contained: true
+      toc: true
+      thumbnails: true
+      lightbox: true
+      gallery: true
+      highlight: tango
+
